@@ -1,3 +1,13 @@
+2012-06-14  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r120393.
+        http://trac.webkit.org/changeset/120393
+        https://bugs.webkit.org/show_bug.cgi?id=89163
+
+        breaks cr-mac build (Requested by morrita on #webkit).
+
+        * wtf/Platform.h:
+
 2012-06-14  Tony Payne  <tpayne@chromium.org>
 
         [chromium] Add iccjpeg and qcms to chromium port.
